<resources>
    <string name="app_name">NotepadApplication</string>
    <string name="fab_content_desc">add</string>
    <string name="notes">Notes</string>
    <string name="search_icon">search</string>
    <string name="search_error">search error</string>
    <string name="back_arrow">back arrow</string>
    <string name="save_button">Save</string>
    <string name="new_note_title">Title</string>
    <string name="new_note_body">Type something…</string>
</resources>