<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteFragment"
    android:background="@color/light_orange">

    <RelativeLayout
        android:id="@+id/new_note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/back_arrow"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_note_header"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/new_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_note_title"
            android:textSize="30sp"
            android:autofillHints="@string/new_note_title"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/new_note_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_note_title"
            android:layout_marginTop="20dp"
            android:hint="@string/new_note_body"
            android:textSize="26sp"
            android:autofillHints="@string/new_note_body"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:fontFamily="sans-serif-condensed-light"
            android:scrollbars="vertical"/>

    </RelativeLayout>

</RelativeLayout>