<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    android:background="@color/light_orange">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="38sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_weight="0.5"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0.2"
            android:contentDescription="@string/search_icon"
            android:paddingTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/fab_content_desc"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

</RelativeLayout>